--- a/index.mdx
+++ b/index.mdx
@@ -93,32 +93,25 @@ Scale your AI applications with enterprise-grade infrastructure and support.
   <Card
     title="Dedicated Servers"
     icon="server"
-    href="/enterprise/dedicated-servers"
+    href="https://modelslab.com/enterprise"
   >
     Private GPU infrastructure for maximum performance
   </Card>
   <Card
-    title="Custom Integration"
-    icon="gear"
-    href="/enterprise/custom-integration"
-  >
-    White-label solutions and custom API development
-  </Card>
-  <Card
     title="Pricing & Plans"
     icon="credit-card"
-    href="/pricing"
+    href="https://modelslab.com/pricing"
   >
     Flexible pricing from startup to enterprise scale
   </Card>
   <Card
     title="Enterprise Support"
     icon="headset"
-    href="/support"
+    href="https://modelslab.com/support"
   >
     24/7 priority support with dedicated account management
   </Card>
-</CardGroup>
+</CardGroup>  
 
 ## Developer Resources
 
