--- a/index.mdx
+++ b/index.mdx
@@ -100,7 +100,7 @@ Scale your AI applications with enterprise-grade infrastructure and support.
   <Card
     title="Pricing & Plans"
     icon="credit-card"
-    href="https://modelslab.com/pricing"
+    href="https://modelslab.com/enterprise"
   >
     Flexible pricing from startup to enterprise scale
   </Card>
