model id in vide ultra apis

--- a/video-api/imagetovideo-ultra.mdx
+++ b/video-api/imagetovideo-ultra.mdx
@@ -24,6 +24,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
     "key":"",
     "init_image":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/Vil4dkFzgFw0xyU7YsF4YqzJQXuGmr-metaNTliM2VmYTNmODE2NjdiMzljYjYzOTdlOGU5Nzg1OTAud2VicA==-.webp",
     "prompt":"moving character",
+    "model_id": "wan2.1",
     "negative_prompt":"low quality",
     "resolution":320,
     "num_frames":16,
