--- a/video-api/texttovideo-ultra.mdx
+++ b/video-api/texttovideo-ultra.mdx
@@ -19,9 +19,10 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 ## Body
 ```json json
 {
-     "key":"",
-     "prompt":"Space Station in space",
+    "key":"",
+    "prompt":"Space Station in space",
     "negative_prompt":"low quality",
+    "model_id": "wan2.1",
     "resolution":480,
     "num_frames":81,
     "num_inference_steps":30,
