ap_key and model_id

--- a/api-guide/apis/enterprise-api/image-editing/fashion.mdx
+++ b/api-guide/apis/enterprise-api/image-editing/fashion.mdx
@@ -19,7 +19,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 
 ```json json
 {
-  "key": "",
+  "key": "your_api_key",
   "init_image": "https://example.com/model-image.jpg",
   "cloth_image": "https://example.com/cloth-image.jpg",
   "cloth_type": "upper_body",
