--- a/api-guide/apis/enterprise-api/image-editing/head-shot.mdx
+++ b/api-guide/apis/enterprise-api/image-editing/head-shot.mdx
@@ -19,7 +19,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 
 ```json json
 {
-  "key": "",
+  "key": "your_api_key",
   "face_image": "https://example.com/face-image.jpg",
   "prompt": "professional headshot, business attire, studio lighting",
   "negative_prompt": "blurry, low quality, distorted",
