--- a/deepfake-api/multiple-face-swap.mdx
+++ b/deepfake-api/multiple-face-swap.mdx
@@ -14,7 +14,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 ## Body
 ```json json
 {  
-    "key": "",  
+    "key": "your_api_key",  
     "init_image":"https://i.pinimg.com/564x/4c/6a/d0/4c6ad0f74a3a251344cb115699a9a7c9.jpg",  
     "target_image":"https://i.pinimg.com/564x/11/ac/0d/11ac0ddaf6962e395f30abc61043393e.jpg",  
     "webhook": null,  
