--- a/deepfake-api/single-video-swap.mdx
+++ b/deepfake-api/single-video-swap.mdx
@@ -13,7 +13,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 ## Body 
 ```json json
 {     
-    "key": "",    
+    "key": "your_api_key",    
     "init_image":"https://plus.unsplash.com/premium_photo-1661508557554-e3d96f2fdde5?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8YmVhdXRpZnVsJTIwZ2lybHxlbnwwfHwwfHx8MA%3D%3D",    
     "init_video":"https://tawk.link/6332cd5154f06e12d8971855/vc/66d997a6a2bc5fe2b627a250/v/4239c555189b772d5ca1bd5aa4bf872c4c12a07e/sdfsdfsdf.mp4",    
     "output_format":"mp4",    
