--- a/general-api/base64-crop.mdx
+++ b/general-api/base64-crop.mdx
@@ -18,7 +18,7 @@ Send a `POST` request to below endpoint.
 ## Body
 ```json json
 {  
-    "key": "",  
+    "key": "your_api_key",  
     "image": "data:image/png;base64,your_base_64_string",  
     "crop": "true"
 }
