--- a/general-api/buy-model.mdx
+++ b/general-api/buy-model.mdx
@@ -18,7 +18,7 @@ Send a `POST` request to below endpoint and pass the **quantity** of the models 
 
 ```json json
 {  
-  "key": "",  
+  "key": "your_api_key",  
   "quantity": ""
 }
 ```
