--- a/general-api/delete-image.mdx
+++ b/general-api/delete-image.mdx
@@ -14,7 +14,7 @@ Send a `POST` request to below endpoint and pass the name of the image you want 
 
 ```json json
 {  
-    "key": "",  
+    "key": "your_api_key",  
     "request_id": 2398,  
     "type": "image"
 }
