--- a/image-editing/fashion.mdx
+++ b/image-editing/fashion.mdx
@@ -17,7 +17,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ## Body
 ```json json
 {   
-       "key": "",   
+       "key": "your_api_key",   
        "prompt": ":A realistic photo of a model wearing a beautiful t-shirt",   
        "negative_prompt": "Low quality, unrealistic, bad cloth, warped cloth",   
        "init_image": "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/5dzoZ9qWI2FQxwceFDb3zULRtwCRmF-metaZjA5NjMyX3BhcmVudF8xXzE2NTMwMDMzODguanBn-.jpg",   
