--- a/image-editing/flux-headshot.mdx
+++ b/image-editing/flux-headshot.mdx
@@ -15,7 +15,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ## Body 
 ```json json
 {  
-   "key": "",  
+   "key": "your_api_key",  
    "prompt": "pretty woman",  
    "negative_prompt": "anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry",  
    "face_image":"https://i.ibb.co/qYMvpkH/7b12610da886d2a8a31e62758b4b6e7c.webp",  
