--- a/image-editing/mask-creator.mdx
+++ b/image-editing/mask-creator.mdx
@@ -14,7 +14,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ## Body
 ```json json
 {    
-  "key": "",    
+  "key": "your_api_key",    
   "init_image": "https://i.ibb.co/kMRK2mg/image2.jpg",    
   "specific_object": "the ball",    
   "track_id":null,    
