--- a/image-editing/outpaint.mdx
+++ b/image-editing/outpaint.mdx
@@ -17,7 +17,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ## Body
 ```json json
 {    
-       "key": "",    
+       "key": "your_api_key",    
        "seed": 12345,    
        "width": 512,    
        "height": 512,    
