--- a/image-editing/super-resolution.mdx
+++ b/image-editing/super-resolution.mdx
@@ -28,7 +28,7 @@ Send a `POST` request to below endpoint to return the corresponding super resolu
 ## Body
 ```json json
 {    
-    "key": "",   
+    "key": "your_api_key",   
     "init_image": "https://i.pinimg.com/564x/fc/8e/6a/fc8e6a075f341284b0f44bf1592f9f3c.jpg", 
     "face_enhance": false, 
     "scale": 3, 
