--- a/image-generation/community-models/dreambooth-text-to-image.mdx
+++ b/image-generation/community-models/dreambooth-text-to-image.mdx
@@ -55,7 +55,7 @@ This endpoint also supports schedulers. Use the "scheduler" parameter in the req
 ## Body
 ```json json
 {  
-  "key": "",  
+  "key": "your_api_key",  
   "model_id": "your_model_id",  
   "prompt": "ultra realistic close up portrait ((beautiful pale cyberpunk female with heavy black eyeliner)), blue eyes, shaved side haircut, hyper detail, cinematic lighting, magic neon, dark red city, Canon EOS R3, nikon, f/1.4, ISO 200, 1/160s, 8K, RAW, unedited, symmetrical balance, in-frame, 8K",  
   "negative_prompt": "",  
