--- a/image-generation/controlnet/controlnet-main.mdx
+++ b/image-generation/controlnet/controlnet-main.mdx
@@ -110,7 +110,7 @@ This endpoint also supports schedulers. Use the `scheduler` parameter in the req
       <Tab title="Canny">
         ```json
         {
-          "key": "",
+          "key": "your_api_key",
           "controlnet_model": "canny",
           "controlnet_type": "canny",
           "model_id": "realistic-vision-51",
@@ -139,7 +139,7 @@ This endpoint also supports schedulers. Use the `scheduler` parameter in the req
       <Tab title="Depth">
         ```json
         {
-          "key": "",
+          "key": "your_api_key",
           "controlnet_model": "depth",
           "controlnet_type": "depth",
           "model_id": "realistic-vision-51",
@@ -168,7 +168,7 @@ This endpoint also supports schedulers. Use the `scheduler` parameter in the req
       <Tab title="Hed">
         ```json
         {
-          "key": "",
+          "key": "your_api_key",
           "controlnet_model": "hed",
           "controlnet_type": "hed",
           "model_id": "realistic-vision-51",
@@ -197,7 +197,7 @@ This endpoint also supports schedulers. Use the `scheduler` parameter in the req
       <Tab title="MLSD">
         ```json
         {
-          "key": "",
+          "key": "your_api_key",
           "controlnet_model": "mlsd",
           "controlnet_type": "mlsd",
           "model_id": "realistic-vision-51",
@@ -226,7 +226,7 @@ This endpoint also supports schedulers. Use the `scheduler` parameter in the req
       <Tab title="Normal">
         ```json
         {
-          "key": "",
+          "key": "your_api_key",
           "controlnet_model": "normal",
           "controlnet_type": "normal",
           "model_id": "realistic-vision-51",
@@ -255,7 +255,7 @@ This endpoint also supports schedulers. Use the `scheduler` parameter in the req
       <Tab title="Scribble">
         ```json
         {
-          "key": "",
+          "key": "your_api_key",
           "controlnet_model": "scribble",
           "controlnet_type": "scribble",
           "model_id": "realistic-vision-51",
@@ -284,7 +284,7 @@ This endpoint also supports schedulers. Use the `scheduler` parameter in the req
       <Tab title="In-Paint">
         ```json
         {
-          "key": "",
+          "key": "your_api_key",
           "controlnet_model": "inpaint",
           "controlnet_type": "inpaint",
           "model_id": "realistic-vision-51",
@@ -313,7 +313,7 @@ This endpoint also supports schedulers. Use the `scheduler` parameter in the req
       <Tab title="Soft Edge">
         ```json
         {
-          "key": "",
+          "key": "your_api_key",
           "controlnet_model": "softedge",
           "controlnet_type": "softedge",
           "model_id": "realistic-vision-51",
@@ -342,7 +342,7 @@ This endpoint also supports schedulers. Use the `scheduler` parameter in the req
       <Tab title="Line Art">
         ```json
         {
-          "key": "",
+          "key": "your_api_key",
           "controlnet_model": "lineart",
           "controlnet_type": "lineart",
           "model_id": "realistic-vision-51",
@@ -375,7 +375,7 @@ This endpoint also supports schedulers. Use the `scheduler` parameter in the req
       <Tab title="Canny">
         ```json
         {
-          "key": "",
+          "key": "your_api_key",
           "model_id": "boziorealvisxlv4",
           "init_image": "https://i.pinimg.com/736x/03/a0/4d/03a04d738c9aba3c4b84caa3a5b912ae.jpg",
           "prompt": "hot girl wearing, pink dress, high quality, 4k",
@@ -405,7 +405,7 @@ This endpoint also supports schedulers. Use the `scheduler` parameter in the req
       <Tab title="Depth">
         ```json
         {
-          "key": "",
+          "key": "your_api_key",
           "model_id": "boziorealvisxlv4",
           "init_image": "https://i.pinimg.com/736x/03/a0/4d/03a04d738c9aba3c4b84caa3a5b912ae.jpg",
           "prompt": "hot girl wearing, pink dress, high quality, 4k",
