--- a/image-generation/controlnet/controlnet-multi.mdx
+++ b/image-generation/controlnet/controlnet-multi.mdx
@@ -67,7 +67,7 @@ This endpoint also supports schedulers. Use the `scheduler` parameter in the req
 
 ```json json
 {  
-  "key": "",  
+  "key": "your_api_key",  
   "controlnet_model": "openpose,canny,face_detector",  
   "controlnet_type" :"openpose",  
   "model_id": "midjourney",  
