--- a/image-generation/flux_kontext/flux-kontext-img-to-image.mdx
+++ b/image-generation/flux_kontext/flux-kontext-img-to-image.mdx
@@ -15,7 +15,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ## Body
 ```json json
 {
-  "key": "",
+  "key": "your_api_key",
   "init_image": "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/SwogScBP0DtW8M90EDCMAjTYXdHFW4-metaMjhlNjgxMWE3MjY0NmY5ZmJjYTcyNGFjNWU3NTZlZGQuanBn-.jpg",
   "init_image_2": "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/CGuHsNAUtB4Uif4J0tVTbAlEaICbB7-metaMzg4ZTdmZGRiNmQyZmYxY2JiMzk4ZTZkM2VjZDBmNTEuanBn-.jpg",
   "prompt": "a girl from image one holding the can from image two",
