--- a/image-generation/realtime-stable-diffusion/text-to-image.mdx
+++ b/image-generation/realtime-stable-diffusion/text-to-image.mdx
@@ -19,7 +19,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ## Body 
 ```json json
 {  
-    "key": "",  
+    "key": "your_api_key",  
     "prompt": "ultra realistic close up portrait ((beautiful pale cyberpunk female with heavy black eyeliner))",  
     "negative_prompt": "bad quality",  
     "width": "512",  
