--- a/uncensored-chat-api/uncensored-chat.mdx
+++ b/uncensored-chat-api/uncensored-chat.mdx
@@ -68,7 +68,7 @@ To continue the next API call, append the object of property `role` and `content
 
 ```json json
 {
-  "key": "",
+  "key": "your_api_key",
   "messages": [
     {
       "role": "system",
