--- a/video-api/texttovideo.mdx
+++ b/video-api/texttovideo.mdx
@@ -20,7 +20,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 ## Body
 ```json json
 {
-    "key": "",
+    "key": "your_api_key",
     "model_id": "cogvideox",
     "prompt": "Space Station in space",
     "negative_prompt": "low quality",
