--- a/voice-cloning/speech-to-text.mdx
+++ b/voice-cloning/speech-to-text.mdx
@@ -16,7 +16,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ## Body 
 ```json json
 {    
-  "key": "",    
+  "key": "your_api_key",    
   "init_audio": "https://pub-f3505056e06f40d6990886c8e14102b2.r2.dev/audio/tom_hanks_1.wav",    
   "language": "en",    
   "timestamp_level": null,    
