--- a/voice-cloning/text-to-speech.mdx
+++ b/voice-cloning/text-to-speech.mdx
@@ -49,7 +49,7 @@ The following emotion tags can be added to speech prompts to enhance expressiven
 ## Body
 ```json json
 {    
-    "key": "",
+    "key": "your_api_key",
     "prompt":"Build next-generation AI products without worrying about GPUs",
     "language":"american english",
     "voice_id":"madison",
