--- a/voice-cloning/vocal-isolator.mdx
+++ b/voice-cloning/vocal-isolator.mdx
@@ -17,7 +17,7 @@ Either `init_video` or `init_audio` is required. If both are provided, the `init
 
 ```json json
 {    
-    "key": "", 
+    "key": "your_api_key", 
     "init_video": "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/IxEA4uB8vGWAk1BQVvqbciebfgGFMK-metadmlkZW9wbGF5YmFja180Lm1wNA==-.mp4", 
     "seed":234322, 
     "base64": false,
