--- a/voice-cloning/voice-cloning.mdx
+++ b/voice-cloning/voice-cloning.mdx
@@ -51,7 +51,7 @@ Best Practices for Hindi Language
 ## Body 
 ```json json
 {    
-  "key": "", 
+  "key": "your_api_key", 
   "prompt":"Narrative voices capable of pronouncing terminologies & acronyms in training and ai learning materials.", 
   "init_audio":"https://pub-f3505056e06f40d6990886c8e14102b2.r2.dev/audio/tom_hanks_1.wav", 
   "language":"english", 
