--- a/voice-cloning/voice-cover.mdx
+++ b/voice-cloning/voice-cover.mdx
@@ -13,7 +13,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ## Body
 ```json json
 {
-    "key": "",
+    "key": "your_api_key",
     "init_audio": "https://www.youtube.com/watch?v=ixkoVwKQaJg",
     "model_id": "zoro",
     "pitch": "none",
