--- a/api-guide/apis/enterprise-api/uncensored-chat/start.mdx
+++ b/api-guide/apis/enterprise-api/uncensored-chat/start.mdx
@@ -86,7 +86,7 @@ To continue the next API call, append the object of property `role` and `content
 ``` json json
 
 {
-"key": "",
+"key": "your_api_key",
 "messages": [
        {
             "role": "system",
