--- a/general-api/base64-to-url.mdx
+++ b/general-api/base64-to-url.mdx
@@ -17,7 +17,7 @@ Send a `POST` request to below endpoint.
 ## Body
 ```json json
 {  
-  "key": "",  
+  "key": "your_api_key",  
   "base64_string": "data:image/png;base64,<your_base_64_string>"
 }
 ```
