--- a/general-api/nsfw-image-check.mdx
+++ b/general-api/nsfw-image-check.mdx
@@ -13,7 +13,7 @@ Send a `POST` request to below endpoint to check if an image is nsfw or not.
 ## Body
 ```json json
 {  
-    "key": "",  
+    "key": "your_api_key",  
     "init_image": "http://your-image-url.com"
 }
 ```
