--- a/general-api/nsfw-prompt-check.mdx
+++ b/general-api/nsfw-prompt-check.mdx
@@ -13,7 +13,7 @@ Send a `POST` request to below endpoint to check if an image is nsfw or not.
 ## Body
 ```json json
 {  
-    "key": "",  
+    "key": "your_api_key",  
     "prompt": "ultra realistic close up portrait ((beautiful pale cyberpunk female with heavy black eyeliner, nude)) , blue eyes, shaved side haircut, hyper detail, cinematic lighting, magic neon, dark red city, Canon EOS R3, nikon, f/1.4, ISO 200, 1/160s, 8K, RAW, unedited, symmetrical balance, in-frame, 8K"
 }
 ```
