--- a/image-editing/inpaint.mdx
+++ b/image-editing/inpaint.mdx
@@ -21,7 +21,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ## Body
 ```json json
 {  
-    "key": "",  
+    "key": "your_api_key",  
     "prompt": "a cat sitting on a bench",  
     "negative_prompt": null,  
     "init_image": "https://raw.githubusercontent.com/CompVis/stable-diffusion/main/data/inpainting_examples/overture-creations-5sI6fQgYIuo.png",  
