--- a/image-editing/object-remover.mdx
+++ b/image-editing/object-remover.mdx
@@ -15,7 +15,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ## Body
 ```json json
 {    
-  "key": "",    
+  "key": "your_api_key",    
   "init_image": "https://i.ibb.co/kMRK2mg/image2.jpg",    
   "mask_image": "https://i.ibb.co/tH0Z8HY/mask2.jpg",    
   "track_id":null,    
