--- a/image-generation/community-models/dreambooth-fetch-queue-image.mdx
+++ b/image-generation/community-models/dreambooth-fetch-queue-image.mdx
@@ -16,7 +16,7 @@ Send a `POST` request to below endpoint to return the corresponding queued image
 ## Body
 ```json json
 { 
-    "key": "", 
+    "key": "your_api_key", 
     "request_id": "your_request_id"
 }
 ```
