--- a/image-generation/community-models/dreambooth-image-to-image.mdx
+++ b/image-generation/community-models/dreambooth-image-to-image.mdx
@@ -39,7 +39,7 @@ This endpoint also supports schedulers. Use the "scheduler" parameter in the req
 ## Body
 ```json json
 {  
-    "key": "",  
+    "key": "your_api_key",  
     "model_id": "realistic-vision-51",  
     "prompt": "women playing tennis",  
     "negative_prompt": null,  
