--- a/image-generation/community-models/dreambooth-inpainting.mdx
+++ b/image-generation/community-models/dreambooth-inpainting.mdx
@@ -36,8 +36,8 @@ This endpoint also supports schedulers. Use the "scheduler" parameter in the req
 ## Body
 ```json json
 {  
-    "key": "",  
-    "model_id": "your_model_id",  
+    "key": "your_api_key",  
+    "model_id": "lazymixv4-inpaint",  
     "prompt": "a cat sitting on a bench",  
     "negative_prompt": null,  
     "init_image": "https://raw.githubusercontent.com/CompVis/stable-diffusion/main/data/inpainting_examples/overture-creations-5sI6fQgYIuo.png",  
