--- a/image-generation/community-models/dreambooth-lora-multi.mdx
+++ b/image-generation/community-models/dreambooth-lora-multi.mdx
@@ -39,7 +39,7 @@ This endpoint also supports schedulers. Use the "scheduler" parameter in the req
 ## Body
 ```json json
 {  
-  "key": "",  
+  "key": "your_api_key",  
   "model_id": "f222-diffusion",  
   "prompt": "a female model doing photoshoot, ultra realistic face, ultra high resolution, 4K image",  
   "negative_prompt": "painting, extra fingers, mutated hands, poorly drawn hands, poorly drawn face, deformed, ugly, blurry, bad anatomy, bad proportions, extra limbs, cloned face, skinny, glitchy, double torso, extra arms, extra hands, mangled fingers, missing lips, ugly face, distorted face, extra legs, anime",  
