--- a/image-generation/community-models/dreambooth-lora.mdx
+++ b/image-generation/community-models/dreambooth-lora.mdx
@@ -43,7 +43,7 @@ This endpoint also supports schedulers. Use the "scheduler" parameter in the req
 ## Body 
 ```json json
 {  
-  "key": "",  
+  "key": "your_api_key",  
   "model_id": "tamarin-xl-v1",  
   "prompt": "actual 8K portrait photo of gareth person, portrait, happy colors, bright eyes, clear eyes, warm smile, smooth soft skin, big dreamy eyes, beautiful intricate colored hair, symmetrical, anime wide eyes, soft lighting, detailed face, by makoto shinkai, stanley artgerm lau, wlop, rossdraws, concept art, digital painting, looking into camera",  
   "negative_prompt": "painting, extra fingers, mutated hands, poorly drawn hands, poorly drawn face, deformed, ugly, blurry, bad anatomy, bad proportions, extra limbs, cloned face, skinny, glitchy, double torso, extra arms, extra hands, mangled fingers, missing lips, ugly face, distorted face, extra legs, anime",  
