--- a/image-generation/community-models/dreambooth-reload-model.mdx
+++ b/image-generation/community-models/dreambooth-reload-model.mdx
@@ -20,7 +20,7 @@ Send a `POST` request to below endpoint to reload a specific model specified by 
 ## Body
 ```json json
 { 
-  "key": "", 
+  "key": "your_api_key", 
   "model_id": "model_id"
 }
 ```
