--- a/image-generation/flux/flux-text-to-image.mdx
+++ b/image-generation/flux/flux-text-to-image.mdx
@@ -15,7 +15,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ## Body
 ```json json
 {  
-    "key": "",  
+    "key": "your_api_key",  
     "model_id": "flux",  
     "prompt": "ultra realistic close up portrait ((beautiful pale cyberpunk female with heavy black eyeliner)), blue eyes, shaved side haircut, hyper detail, cinematic lighting, magic neon, dark red city, Canon EOS R3, nikon, f/1.4, ISO 200, 1/160s, 8K, RAW, unedited, symmetrical balance, in-frame, 8K",  
     "width": "512",  
