--- a/image-generation/realtime-stable-diffusion/inpaint.mdx
+++ b/image-generation/realtime-stable-diffusion/inpaint.mdx
@@ -19,7 +19,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ## Body
 ```json json
 {  
-    "key": "",  
+    "key": "your_api_key",  
     "prompt": "a cat sitting on a bench",  
     "negative_prompt": "bad quality",  
     "init_image": "https://raw.githubusercontent.com/CompVis/stable-diffusion/main/data/inpainting_examples/overture-creations-5sI6fQgYIuo.png",  
