--- a/voice-cloning/overview.mdx
+++ b/voice-cloning/overview.mdx
@@ -7,7 +7,7 @@ description: 'Tools for speech-to-text, text-to-speech, text-to-SFX, and voice-o
 ### Endpoints
 
 <CardGroup>
-  <Card title="Text to Speech" href="/voice-cloning/text-to-speech">
+  <Card title="Text to Speech" icon="speech" href="/voice-cloning/text-to-speech">
     Transform text content into high-quality speech using advanced TTS technology
   </Card>
   <Card title="Voice Cloning" href="/voice-cloning/voice-cloning">
