--- a/voice-cloning/voice-cover.mdx
+++ b/voice-cloning/voice-cover.mdx
@@ -10,6 +10,10 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 --request POST 'https://modelslab.com/api/v6/voice/voice_cover' \
 ```
 
+<Tip>
+Find all available voice models [HERE](https://modelslab.com/models?feature=audiogen).
+</Tip>
+
 ## Body
 ```json json
 {
