voice model ids and image models ids

--- a/image-generation/community-models/dreambooth-image-to-image.mdx
+++ b/image-generation/community-models/dreambooth-image-to-image.mdx
@@ -7,6 +7,10 @@ description: 'Dreambooth Image to Image API is used to generate an image from an
 The dimensions of the generated image will be the same as the dimensions of the init\_image.
 </Note>
 
+<Check>
+You can find a list of the public models available and their IDs [here](https://modelslab.com/models?base_model%5B0%5D=sdxl-10&base_model%5B1%5D=sd-15&base_model%5B2%5D=flux-1-d&base_model%5B3%5D=pony&feature=imagen&model_type%5B0%5D=checkpoint&sort=recommended)
+</Check>
+
 ![Image to image endpoint result](/images/image-generation/community-models/assets/images/Image-to-image-0130f41cb14826b399834cb780856e8a.jpg)
 
 ## Request
