--- a/image-generation/community-models/dreambooth-text-to-image.mdx
+++ b/image-generation/community-models/dreambooth-text-to-image.mdx
@@ -9,7 +9,7 @@ You can make an API call to your trained models as well as to any public model.
 </Info>
 
 <Check>
-You can find a list of the public models available and their IDs [here](https://modelslab.com/models)
+You can find a list of the public models available and their IDs [here](https://modelslab.com/models?base_model%5B0%5D=sdxl-10&base_model%5B1%5D=sd-15&base_model%5B2%5D=flux-1-d&base_model%5B3%5D=pony&feature=imagen&model_type%5B0%5D=checkpoint&sort=recommended)
 </Check>
 
 ![Text to image endpoint result](/images/image-generation/community-models/assets/images/Text-to-image-1-a226305d52e197b14c4cc0b1534ea06c.jpg)
