--- a/enterprise-api/text-to-image/controlnet-ep.mdx
+++ b/enterprise-api/text-to-image/controlnet-ep.mdx
@@ -1,65 +1,15 @@
 ---
 title: "Controlnet"
+description: "This endpoint is used to generate ControlNet images."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
 
-This endpoint is used to generate ControlNet images.
 
-![Contonet image](\images\enterprise-api\text-to-image\assets\images\Controlnet-000f7389fbf619b2021f072eb38a68c5.jpg)
-
-<Check>
-  You can also use this endpoint to inpaint images with ControlNet. Just make sure to pass the link to the `mask_image` in the request body. and use controlnet\_model as "inpaint"
-</Check>
-
-## Request[​](#request "Direct link to Request")
-
-```
+## Request
+Send a `POST` request to below endpoint.
+```curl curl
 --request POST 'https://modelslab.com/api/v1/enterprise/controlnet' \
 ```
-
-Send a `POST` request to [https://modelslab.com/api/v1/enterprise/controlnet](https://modelslab.com/api/v1/enterprise/controlnet) endpoint.
-
-## Body Attributes[​](#body-attributes "Direct link to Body Attributes")
-
-| Parameter                           | Description                                                                                                                                                                            |
-| :---------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **key**                             | Your enterprise API Key used for request authorization                                                                                                                                 |
-| **model\_id**                       | The ID of the model to be used. It can be public or your trained model.                                                                                                                |
-| **controlnet\_model**               | ControlNet model ID. It can be from the [models](#models) list or user trained.                                                                                                        |
-| **controlnet\_type**                | ControlNet model type. It can be from the [models](#models) list.                                                                                                                      |
-| **auto\_hint**                      | Auto hint image;**options**: yes/no                                                                                                                                                    |
-| **guess\_mode**                     | Set this to *yes* if you don't pass any prompt. The model will try to guess what's in the **init\_image** and create best variations on its own. **Options**: yes/no                   |
-| **prompt**                          | Text prompt with description of required image modifications. Make it as detailed as possible for best results.                                                                        |
-| **negative\_prompt**                | Items you don't want in the image                                                                                                                                                      |
-| **init\_image**                     | Link to the Initial Image                                                                                                                                                              |
-| **control\_image**                  | Link to the Controlnet Image                                                                                                                                                           |
-| **mask\_image**                     | Link to the mask image for inpainting                                                                                                                                                  |
-| **width**                           | Max Height: Width: 1024x1024                                                                                                                                                           |
-| **height**                          | Max Height: Width: 1024x1024                                                                                                                                                           |
-| **samples**                         | Number of images to be returned in response. The maximum value is 4.                                                                                                                   |
-| **scheduler**                       | Use it to set a [scheduler](#schedulers).                                                                                                                                              |
-| **tomesd**                          | Enable tomesd to generate images: gives really fast results, **default**: yes, **options**: yes/no                                                                                     |
-| **use\_karras\_sigmas**             | Use keras sigmas to generate images. gives nice results, **default**: yes, **options**: yes/no                                                                                         |
-| **algorithm\_type**                 | Used in DPMSolverMultistepScheduler scheduler, **default**: none, **options**: dpmsolver+++                                                                                            |
-| **vae**                             | Use custom vae in generating images **default**: null                                                                                                                                  |
-| **lora\_strength**                  | Specify the strength of the LoRa model you're using. If using multiple LoRa, provide each value as a comma-separated range from minimum 0.1 to maximum 1.                              |
-| **lora\_model**                     | Multi lora is supported, pass comma saparated values. Example contrast-fix,yae-miko-genshin                                                                                            |
-| **num\_inference\_steps**           | Number of denoising steps, The value accepts 21,31.                                                                                                                                    |
-| **safety\_checker**                 | A checker for NSFW images. If such an image is detected,it will be replaced by a blank image; default: yes, options: yes/no                                                            |
-| **enhance\_prompt**                 | Enhance prompts for better results; **default**: yes, **options**: yes/no                                                                                                              |
-| **multi\_lingual**                  | Use different language then english; **default**: yes, **options**: yes/no                                                                                                             |
-| **guidance\_scale**                 | Scale for classifier-free guidance (minimum: 1; maximum: 20)                                                                                                                           |
-| **controlnet\_conditioning\_scale** | Scale for controlnet guidance (minimum: 1; maximum: 20)                                                                                                                                |
-| **strength**                        | Prompt strength when using **init\_image**. 1.0 corresponds to full destruction of information in the init image.                                                                      |
-| **seed**                            | Seed is used to reproduce results, same seed will give you same image in return again. Pass *null* for a random number.                                                                |
-| **webhook**                         | Set an URL to get a POST API call once the image generation is complete.                                                                                                               |
-| **track\_id**                       | This ID is returned in the response to the webhook API call. This will be used to identify the webhook request.                                                                        |
-| **upscale**                         | Set this parameter to "yes" if you want to upscale the given image resolution two times (2x). If the requested resolution is 512 x 512 px, the generated image will be 1024 x 1024 px. |
-| **clip\_skip**                      | Clip Skip (minimum: 1; maximum: 8)                                                                                                                                                     |
-| **base64**                          | Get response as base64 string, pass init\_image, mask\_image , control\_image as base64 string, to get base64 response. **default**: "no", **options**: yes/no                         |
-| **temp**                            | Create temp image link. This link is valid for 24 hours. **temp**: yes, **options**: yes/no                                                                                            |
-
 <Info>
   To use the **load balancer**, you need to have **more than 1 server**. Pass the first server's API key, and it will handle the load balancing with the other servers.
 </Info>
@@ -68,8 +18,44 @@ Send a `POST` request to [https://modelslab.com/api/v1/enterprise/controlnet](ht
   You can also use multi ControlNet. Just make sure to pass comma saparated controlnet models to the `controlnet_model` as "canny,depth" and `init_image` in the request body.
 </Check>
 
-### ControlNet Models[​](#controlnet-models "Direct link to ControlNet Models")
+<Check>
+  You can also use multi Lora. Just make sure to pass comma saparated lora model ids to the `lora_model` as `"more_details,animie"` in the request body.
+</Check>
 
+<Check>
+  You can also use this endpoint to inpaint images with ControlNet. Just make sure to pass the link to the `mask_image` in the request body. and use controlnet\_model as `inpaint`.
+</Check>
+
+
+## Body
+```json json
+{  
+  "key": "enterprise_api_key",  
+  "controlnet_model": "canny",  
+  "controlnet_type" :"canny",  
+  "model_id": "midjourney",  
+  "auto_hint": "yes",  
+  "guess_mode" : "no",  
+  "prompt": "a model doing photoshoot, ultra high resolution, 4K image",  
+  "negative_prompt": null,  
+  "init_image": "https://huggingface.co/datasets/diffusers/test-arrays/resolve/main/stable_diffusion_imgvar/input_image_vermeer.png",  
+  "mask_image": null,  
+  "width": "512",  
+  "height": "512",  
+  "samples": "1",  
+  "scheduler": "UniPCMultistepScheduler",  
+  "num_inference_steps": "30",  
+  "safety_checker": "no",  
+  "enhance_prompt": "yes",  
+  "guidance_scale": 7.5,  
+  "strength": 0.55,  
+  "seed": null,  
+  "webhook": null,  
+  "track_id": null
+}
+```
+
+## ControlNet Models
 ControlNet API using Controlnet 1.1 as default: Suported controlnet\_model:
 
 * canny
@@ -88,9 +74,8 @@ ControlNet API using Controlnet 1.1 as default: Suported controlnet\_model:
 * face\_detector
 * qrcode
 
-### Schedulers[​](#schedulers "Direct link to Schedulers")
-
-This endpoint also supports schedulers. Use the "scheduler" parameter in the request body to pass a specific scheduler from the list below:
+### Schedulers
+This endpoint also supports schedulers. Use the `scheduler` parameter in the request body to pass a specific scheduler from the list below:
 
 * DDPMScheduler
 * DDIMScheduler
@@ -111,50 +96,144 @@ This endpoint also supports schedulers. Use the "scheduler" parameter in the req
 * ScoreSdeVeScheduler
 * LCMScheduler
 
-<Check>
-  You can also use multi Lora. Just make sure to pass comma saparated lora model ids to the `lora_model` as `"more_details,animie"` in the request body.
-</Check>
+## Body Attributes
 
-## Example[​](#example "Direct link to Example")
+<ParamField query="key" type="string" required>
+  Your enterprise API Key used for request authorization.
+</ParamField>
 
-### Body[​](#body "Direct link to Body")
+<ParamField query="model_id" type="string" required>
+  The ID of the model to be used. It can be a public model or your trained model.
+</ParamField>
 
-Body Raw
+<ParamField query="controlnet_model" type="string">
+  ControlNet model ID. It can be from the <a href="#models">models</a> list or user trained.
+</ParamField>
 
-```
-{  "key": "enterprise_api_key",  "controlnet_model": "canny",  "controlnet_type" :"canny",  "model_id": "midjourney",  "auto_hint": "yes",  "guess_mode" : "no",  "prompt": "a model doing photoshoot, ultra high resolution, 4K image",  "negative_prompt": null,  "init_image": "https://huggingface.co/datasets/diffusers/test-arrays/resolve/main/stable_diffusion_imgvar/input_image_vermeer.png",  "mask_image": null,  "width": "512",  "height": "512",  "samples": "1",  "scheduler": "UniPCMultistepScheduler",  "num_inference_steps": "30",  "safety_checker": "no",  "enhance_prompt": "yes",  "guidance_scale": 7.5,  "strength": 0.55,  "seed": null,  "webhook": null,  "track_id": null}
-```
+<ParamField query="controlnet_type" type="string">
+  ControlNet model type. It can be from the <a href="#models">models</a> list.
+</ParamField>
 
-### Request[​](#request-1 "Direct link to Request")
+<ParamField query="auto_hint" type="string" enum='["yes","no"]' default="no">
+  Auto hint image. Options: yes/no.
+</ParamField>
 
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
+<ParamField query="guess_mode" type="string" enum='["yes","no"]' default="no">
+  If set to yes and no prompt is passed, the model will attempt to guess what's in the <code>init_image</code> and create variations. Options: yes/no.
+</ParamField>
 
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({  "key": "",  "controlnet_model": "canny",  "controlnet_type" :"canny",  "model_id": "midjourney",  "auto_hint": "yes",  "guess_mode" : "no",  "prompt": "a model doing photoshoot, ultra high resolution, 4K image",  "negative_prompt": null,  "init_image": "https://huggingface.co/datasets/diffusers/test-arrays/resolve/main/stable_diffusion_imgvar/input_image_vermeer.png",  "mask_image": null,  "width": "512",  "height": "512",  "samples": "1",  "scheduler": "UniPCMultistepScheduler",  "num_inference_steps": "30",  "safety_checker": "no",  "enhance_prompt": "yes",  "guidance_scale": 7.5,  "strength": 0.55,  "seed": null,  "webhook": null,  "track_id": null});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v1/enterprise/controlnet", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
+<ParamField query="prompt" type="string">
+  Text prompt describing required image modifications. Make it detailed for best results.
+</ParamField>
 
-```
-<?php$payload = [  "key" => "",   "controlnet_model" => "canny",   "controlnet_type" => "canny",   "model_id" => "midjourney",   "auto_hint" => "yes",   "guess_mode" => "no",   "prompt" => "a model doing photoshoot, ultra high resolution, 4K image",   "negative_prompt" => null,   "init_image" => "https://huggingface.co/datasets/diffusers/test-arrays/resolve/main/stable_diffusion_imgvar/input_image_vermeer.png",   "mask_image" => null,  "width" => "512",   "height" => "512",   "samples" => "1",   "scheduler" => "UniPCMultistepScheduler",   "num_inference_steps" => "30",   "safety_checker" => "no",   "enhance_prompt" => "yes",   "guidance_scale" => 7.5,   "strength" => 0.55,   "seed" => null,   "webhook" => null,   "track_id" => null ];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v1/enterprise/controlnet',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
+<ParamField query="negative_prompt" type="string">
+  Items you don’t want in the image.
+</ParamField>
 
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v1/enterprise/controlnet',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key": "",    "controlnet_model": "canny",    "controlnet_type": "canny",    "model_id": "midjourney",    "auto_hint": "yes",    "guess_mode": "no",    "prompt": "a model doing photoshoot, ultra high resolution, 4K image",    "negative_prompt": null,    "init_image": "https://huggingface.co/datasets/diffusers/test-arrays/resolve/main/stable_diffusion_imgvar/input_image_vermeer.png",    "mask_image": null,    "width": "512",    "height": "512",    "samples": "1",    "scheduler": "UniPCMultistepScheduler",    "num_inference_steps": "30",    "safety_checker": "no",    "enhance_prompt": "yes",    "guidance_scale": 7.5,    "strength": 0.55,    "seed": null,    "webhook": null,    "track_id": null  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
+<ParamField query="init_image" type="string">
+  Link to the initial image.
+</ParamField>
 
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v1/enterprise/controlnet"payload = json.dumps({  "key": "",  "controlnet_model": "canny",  "controlnet_type": "canny",  "model_id": "midjourney",  "auto_hint": "yes",  "guess_mode": "no",  "prompt": "a model doing photoshoot, ultra high resolution, 4K image",  "negative_prompt": None,  "init_image": "https://huggingface.co/datasets/diffusers/test-arrays/resolve/main/stable_diffusion_imgvar/input_image_vermeer.png",  "mask_image": None,  "width": "512",  "height": "512",  "samples": "1",  "scheduler": "UniPCMultistepScheduler",  "num_inference_steps": "30",  "safety_checker": "no",  "enhance_prompt": "yes",  "guidance_scale": 7.5,  "strength": 0.55,  "seed": None,  "webhook": None,  "track_id": None})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
+<ParamField query="control_image" type="string">
+  Link to the ControlNet image.
+</ParamField>
 
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n    \"key\": \"\",\n    \"controlnet_model\": \"canny\",\n    \"type\": \"canny\",\n   \"model_id\": \"midjourney\",\n    \"auto_hint\" : \"yes\",\n    \"guess_mode\" : \"no\",\n    \"prompt\": \"a model doing photoshoot, ultra high resolution, 4K image\",\n    \"negative_prompt\": null,\n    \"init_image\": \"https://huggingface.co/datasets/diffusers/test-arrays/resolve/main/stable_diffusion_imgvar/input_image_vermeer.png\",\n  \"mask_image\": null,\n   \"width\": \"512\",\n    \"height\": \"512\",\n    \"samples\": \"1\",\n    \"scheduler\": \"UniPCMultistepScheduler\",\n    \"num_inference_steps\": \"30\",\n    \"safety_checker\": \"no\",\n    \"enhance_prompt\": \"yes\",\n    \"guidance_scale\": 7.5,\n    \"strength\": 0.55,\n    \"seed\": null,\n    \"webhook\": null,\n    \"track_id\": null\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v1/enterprise/controlnet")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
+<ParamField query="mask_image" type="string">
+  Link to the mask image for inpainting.
+</ParamField>
 
-### Response[​](#response "Direct link to Response")
+<ParamField query="width" type="integer" max="1024" default="512">
+  Width of the image. Maximum: 1024.
+</ParamField>
 
-```
-{    "status": "success",    "generationTime": 3.6150574684143066,    "id": 14905468,    "output": [        "https://pub-8b49af329fae499aa563997f5d4068a4.r2.dev/generations/b989586c-0a5f-41fa-91de-1c5ed5498349-0.png"    ],    "meta": {        "prompt": "mdjrny-v4 style a model doing photoshoot, ultra high resolution, 4K image",        "model_id": "midjourney",        "controlnet_model": "canny",        "controlnet_type": "canny",        "negative_prompt": "",        "scheduler": "UniPCMultistepScheduler",        "safetychecker": "no",        "auto_hint": "yes",        "guess_mode": "no",        "strength": 0.55,        "W": 512,        "H": 512,        "guidance_scale": 3,        "seed": 254638058,        "multi_lingual": "no",        "init_image": "https://huggingface.co/datasets/diffusers/test-arrays/resolve/main/stable_diffusion_imgvar/input_image_vermeer.png",        "mask_image": null,        "steps": 20,        "full_url": "no",        "upscale": "no",        "n_samples": 1,        "lora": null,        "outdir": "out",        "file_prefix": "b989586c-0a5f-41fa-91de-1c5ed5498349"    }}
-```
+<ParamField query="height" type="integer" max="1024" default="512">
+  Height of the image. Maximum: 1024.
+</ParamField>
+
+<ParamField query="samples" type="integer" min="1" max="4" default="1">
+  Number of images to return in the response. Maximum: 4.
+</ParamField>
+
+<ParamField query="scheduler" type="string">
+  The scheduler to use. See <a href="#schedulers">Schedulers</a>.
+</ParamField>
+
+<ParamField query="tomesd" type="string" enum='["yes","no"]' default="yes">
+  Enable ToMeSD for faster results. Default: yes.
+</ParamField>
+
+<ParamField query="use_karras_sigmas" type="string" enum='["yes","no"]' default="yes">
+  Use Karras sigmas for improved results. Default: yes.
+</ParamField>
+
+<ParamField query="algorithm_type" type="string" enum='["none","dpmsolver+++"]' default="none">
+  Used in DPMSolverMultistepScheduler. Default: none.
+</ParamField>
+
+<ParamField query="vae" type="string">
+  Custom VAE to use. Default: null.
+</ParamField>
+
+<ParamField query="lora_strength" type="string">
+  Strength values for LoRa models (comma-separated). Range: 0.1–1.
+</ParamField>
+
+<ParamField query="lora_model" type="string">
+  LoRa models to use (comma-separated). Example: contrast-fix,yae-miko-genshin
+</ParamField>
+
+<ParamField query="num_inference_steps" type="integer" enum='[21,31]' default="21">
+  Number of denoising steps. Allowed values: 21 or 31.
+</ParamField>
+
+<ParamField query="safety_checker" type="string" enum='["yes","no"]' default="yes">
+  NSFW checker. If detected, replaces image with blank. Default: yes.
+</ParamField>
+
+<ParamField query="enhance_prompt" type="string" enum='["yes","no"]' default="yes">
+  Enhance prompts for better results. Default: yes.
+</ParamField>
+
+<ParamField query="multi_lingual" type="string" enum='["yes","no"]' default="yes">
+  Enable multilingual input. Default: yes.
+</ParamField>
+
+<ParamField query="guidance_scale" type="number" min="1" max="20" default="7.5">
+  Scale for classifier-free guidance.
+</ParamField>
+
+<ParamField query="controlnet_conditioning_scale" type="number" min="1" max="20" default="1">
+  Scale for ControlNet guidance.
+</ParamField>
+
+<ParamField query="strength" type="number" min="0" max="1" default="0.7">
+  Prompt strength when using <code>init_image</code>. 1.0 fully overrides the init image.
+</ParamField>
+
+<ParamField query="seed" type="integer">
+  Seed for reproducibility. Pass null for random generation.
+</ParamField>
+
+<ParamField query="webhook" type="string" format="url">
+  URL to receive a POST callback when image generation is complete.
+</ParamField>
+
+<ParamField query="track_id" type="string">
+  ID returned in webhook callback to identify the request.
+</ParamField>
+
+<ParamField query="upscale" type="string" enum='["yes","no"]' default="no">
+  Set to yes to upscale the generated image 2x.
+</ParamField>
+
+<ParamField query="clip_skip" type="integer" min="1" max="8">
+  Clip skip value. Range: 1–8.
+</ParamField>
+
+<ParamField query="base64" type="string" enum='["yes","no"]' default="no">
+  Return response as base64. You can also pass init_image, mask_image, and control_image as base64. Default: no.
+</ParamField>
+
+<ParamField query="temp" type="string" enum='["yes","no"]' default="no">
+  Generate a temporary image link valid for 24 hours. Default: no.
+</ParamField>
