--- a/enterprise-api/text-to-image/load-vae.mdx
+++ b/enterprise-api/text-to-image/load-vae.mdx
@@ -1,69 +1,43 @@
 ---
 title: "Load Vae"
+description: "This endpoint is used to load a VAE model to your dedicated server."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
-
-The Enterprise: This endpoint helps to load vae
-
-## Request[​](#request "Direct link to Request")
-
-```
+## Request
+Send a `POST` request to below endpoint to load vae
+```json json
 --request POST 'https://modelslab.com/api/v1/enterprise/load_vae' \
 ```
 
-Send a `POST` request to [https://modelslab.com/api/v1/enterprise/load\_vae](https://modelslab.com/api/v1/enterprise/load_vae) endpoint to load vae
-
-## Attributes[​](#attributes "Direct link to Attributes")
-
-| Parameter     | Description                                                               |
-| :------------ | :------------------------------------------------------------------------ |
-| **key**       | Your enterprise API Key used for request authorization.                   |
-| **webhook**   | Set an URL to get a POST API call once the image generation is complete.  |
-| **vae\_id**   | id of the vae.                                                            |
-| **vae\_url**  | url of the vae                                                            |
-| **vae\_type** | type of the vae, available options are : "diffusers", "safetensors", "pt" |
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body Raw
-
-```
-{    "key": "enterprise_api_key",    "webhook": "http://webhook-url.com",    "vae_id": "vae-kl-f8-anime2",    "vae_url": "bullhug/kl-f8-anime2",    "vae_type": "diffusers"}
+## Body
+```json json
+{    
+    "key": "enterprise_api_key",    
+    "webhook": "http://webhook-url.com",    
+    "vae_id": "vae-kl-f8-anime2",    
+    "vae_url": "bullhug/kl-f8-anime2",    
+    "vae_type": "diffusers"
+}
 ```
 
-### Request[​](#request-1 "Direct link to Request")
+## Body Attributes
 
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
+<ParamField path="key" type="string" required>
+  Your enterprise API Key used for request authorization.
+</ParamField>
 
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({ "key": "",  "webhook": "http://webhook-url.com",  "vae_id": "vae-kl-f8-anime2",  "vae_url": "bullhug/kl-f8-anime2",  "vae_type": "diffusers"});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};model_reload("https://modelslab.com/api/v1/enterprise/load_vae", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
+<ParamField path="webhook" type="string">
+  A webhook URL to receive a POST callback once the VAE load event completes.
+</ParamField>
 
-```
-<?php$payload = [  "key" => "",  "webhook" => "http://webhook-url.com",  "vae_id" => "vae-kl-f8-anime2",  "vae_url" => "bullhug/kl-f8-anime2",  "vae_type" => "diffusers"];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v1/enterprise/load_vae',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS =>  json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
+<ParamField path="vae_id" type="string" required>
+  The ID to assign to the VAE.
+</ParamField>
 
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v1/enterprise/load_vae',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key": "",    "webhook": "http://webhook-url.com",    "vae_id": "vae-kl-f8-anime2",    "vae_url": "bullhug/kl-f8-anime2",    "vae_type": "diffusers"  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
+<ParamField path="vae_url" type="string" required>
+  The URL of the VAE file.
+</ParamField>
 
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v1/enterprise/load_vae"payload = json.dumps({ "key": "", "webhook": "", "vae_id": "vae-kl-f8-anime2", "vae_url": "bullhug/kl-f8-anime2", "vae_type": "diffusers"})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
-
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n    \"key\": \"enterprise_api_key\",\n    \"webhook\": \"http://webhook-url.com\",\n    \"vae_id\": \"vae-kl-f8-anime2\",\n    \"vae_url\": \"bullhug/kl-f8-anime2\",\n    \"vae_type\": \"diffusers\"\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v1/enterprise/load_vae")  .method("GET", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
-
-### Response[​](#response "Direct link to Response")
-
-```
-{    "status": "success",    "message": "VAE load started"}
-```
+<ParamField path="vae_type" type="string" enum='["diffusers","safetensors","pt"]' required>
+  The type of the VAE file. Options: diffusers, safetensors, pt.
+</ParamField>
