--- a/enterprise-api/text-to-image/verify-model.mdx
+++ b/enterprise-api/text-to-image/verify-model.mdx
@@ -1,70 +1,27 @@
 ---
 title: "Verify Model"
+description: "This endpoint allows users to verify if a specific model exists."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
-
-The Enterprise: Verify Model endpoint is used to check if a particular model exists.
-
-This endpoint is useful when you have loaded a new model and want to check if it is already available for usage.
-
-## Request[​](#request "Direct link to Request")
-
-```
+## Request
+Send a `POST` request to below endpoint to verify if a certain model exists on your dedicated server. Specify the model by using the **model\_id** parameter in the request body.
+```curl curl
 --request POST 'https://modelslab.com/api/v1/enterprise/verify_model' \
 ```
 
-Send a `POST` request to [https://modelslab.com/api/v1/enterprise/verify\_model](https://modelslab.com/api/v1/enterprise/verify_model) endpoint to verify if a certain model exists on your dedicated server. Specify the model by using the **model\_id** parameter in the request body.
+## Body Attributes
+<ParamField path="key" type="string" required>
+  Your enterprise API Key used for request authorization.
+</ParamField>
 
-Watch the how-to video to see it in action.
+<ParamField path="model_id" type="string" required>
+  The ID of the model to be verified.
+</ParamField>
 
-## Attributes[​](#attributes "Direct link to Attributes")
-
-| Parameter     | Description                                             |
-| :------------ | :------------------------------------------------------ |
-| **key**       | Your enterprise API Key used for request authorization. |
-| **model\_id** | The ID of the model to be verified.                     |
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body Raw
-
-```
-{  "key": "enterprise_api_key",  "model_id": "ckpt-model"}
-```
-
-### Request[​](#request-1 "Direct link to Request")
-
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
-
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({ "key": "", "model_id": "model_id"});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};model_reload("https://modelslab.com/api/v1/enterprise/verify_model", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
-
-```
-<?php$payload = [  "key" => "",  "model_id" => "model_id"];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v1/enterprise/verify_model',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS =>  json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
-
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v1/enterprise/verify_model',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key": "",    "model_id": "model_id"  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
-
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v1/enterprise/verify_model"payload = json.dumps({ "key": "", "model_id": "model_id"})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
-
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n  \"key\": \"\",\n  \"model_id\": \"model_id\"\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v1/enterprise/verify_model")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
-
-### Response[​](#response "Direct link to Response")
-
-```
-{  "status": "success",  "message": "Model exists on server"}
+## Body
+```json json
+{  
+    "key": "enterprise_api_key",  
+    "model_id": "ckpt-model"
+}
 ```
