--- a/enterprise-api/overview.mdx
+++ b/enterprise-api/overview.mdx
@@ -3,6 +3,10 @@ title: "Enterprise"
 description: "Collection of All Enterprise APIs offfered by Modelslab."
 ---
 
+<Panel>
+  <Tip>You can buy a Enterprise Subscription  [HERE](https://modelslab.com/enterprise).</Tip>
+</Panel>
+
 ## Categories
 
 <CardGroup>
