--- a/image-generation/model-operation/finetune-list.mdx
+++ b/image-generation/model-operation/finetune-list.mdx
@@ -13,6 +13,6 @@ Send a `POST` request to below endpoint to obtain a list with model IDs.
 ## Body
 ```json json
 { 
-    "key": ""
+    "key": "your_api_key"
 }
 ```
