--- a/image-generation/model-operation/model-list.mdx
+++ b/image-generation/model-operation/model-list.mdx
@@ -10,10 +10,9 @@ Send a `POST` request to below endpoint to obtain a list with the available publ
 --request POST 'https://modelslab.com/api/v4/dreambooth/model_list' \
 ```
 
-
 ## Body
 ```json json
 { 
-    "key": ""
+    "key": "your_api_key"
 }
 ```
