--- a/image-generation/model-operation/overview.mdx
+++ b/image-generation/model-operation/overview.mdx
@@ -3,7 +3,7 @@ title: "Overview"
 description: 'Collection of APIs for model operations.'
 ---
 
-### Endpoints
+## Endpoints
 <CardGroup>
   <Card title="Finetune List" href="/image-generation/flux/flux-text-to-image">
     This endpoint returns an array with the IDs of the models that you have created.
