--- a/open-source/modelq/installation.mdx
+++ b/open-source/modelq/installation.mdx
@@ -1,12 +1,16 @@
 ---
 title: Installation
-description: "ModelQ is a lightweight, battle-tested Python library for scheduling and queuing machine learning inference tasks. It's designed as a faster and simpler alternative to Celery for ML workloads, using Redis and threading to efficiently run background tasks."
+description: "ModelQ is a fast, lightweight Python library for scheduling ML inference tasks using Redis and threading, serving as a simpler alternative to Celery."
 ---
 
 ## Installation[​](#overview "Direct link to Overview")
 
-```bash
+## Install Via PyPI
+```bash pip
 pip install modelq
+```
 
+## Install Via GitHub
+```bash pip
 pip install git+https://github.com/ModelsLab/modelq.git
 ```
