--- a/open-source/modelq/usage.mdx
+++ b/open-source/modelq/usage.mdx
@@ -3,9 +3,9 @@ title: Usage
 description: "ModelQ usage examples."
 ---
 
-## 🧠 Basic Usage
+## Basic Usage
 
-```python
+```python python
 from modelq import ModelQ
 from modelq.exceptions import RetryTaskException
 from redis import Redis
@@ -36,19 +36,19 @@ task = add(2, 3)
 print(task.get_result(q.redis_client))
 ```
 
-## 🖥️ CLI Usage
+## CLI Usage
 
 You can interact with ModelQ using the `modelq` command-line tool. All commands require an `--app-path` parameter to locate your ModelQ instance in `module:object` format.
 
-### Start Workers
+## Start Workers
 
 ```bash
 modelq run-workers main:modelq_app --workers 2
 ```
 
-Start background worker threads for executing tasks.
+### Start background worker threads for executing tasks.
 
-### Check Queue Status
+## Check Queue Status
 
 ```bash
 modelq status --app-path main:modelq_app
@@ -56,7 +56,7 @@ modelq status --app-path main:modelq_app
 
 Show number of servers, queued tasks, and registered task types.
 
-### List Queued Tasks
+## List Queued Tasks
 
 ```bash
 modelq list-queued --app-path main:modelq_app
@@ -64,7 +64,7 @@ modelq list-queued --app-path main:modelq_app
 
 Display a list of all currently queued task IDs and their names.
 
-### Clear the Queue
+## Clear the Queue
 
 ```bash
 modelq clear-queue --app-path main:modelq_app
@@ -72,7 +72,7 @@ modelq clear-queue --app-path main:modelq_app
 
 Remove all tasks from the queue.
 
-### Remove a Specific Task
+## Remove a Specific Task
 
 ```bash
 modelq remove-task --app-path main:modelq_app --task-id <task_id>
@@ -80,7 +80,7 @@ modelq remove-task --app-path main:modelq_app --task-id <task_id>
 
 Remove a specific task from the queue by ID.
 
-### Serve API
+## Serve API
 
 ```bash
 modelq serve-api --app-path main:modelq_app --host 0.0.0.0 --port 8000 --log-level info
@@ -88,7 +88,7 @@ modelq serve-api --app-path main:modelq_app --host 0.0.0.0 --port 8000 --log-lev
 
 Start a FastAPI server for ModelQ to accept task submissions over HTTP.
 
-### Version
+## Version
 
 ```bash
 modelq version
@@ -97,13 +97,13 @@ modelq version
 Print the current version of ModelQ CLI.
 
 
-## 🔢 Pydantic Support
+## Pydantic Support
 
 ModelQ supports **Pydantic models** as both input and output types for tasks. This allows automatic validation of input parameters and structured return values.
 
-### Example
+## Example
 
-```python
+```python python
 from pydantic import BaseModel, Field
 from redis import Redis
 from modelq import ModelQ
@@ -126,9 +126,9 @@ def add(payload: AddIn) -> AddOut:
     return AddOut(total=payload.a + payload.b)
 ```
 
-### Getting Result
+## Getting Result
 
-```python
+```python python
 output = job.get_result(mq.redis_client, returns=AddOut)
 ```
 
@@ -136,23 +136,23 @@ ModelQ will validate inputs using Pydantic and serialize/deserialize results sea
 
 ---
 
-## ⚙️ Middleware Support
+## Middleware Support
 
 ModelQ allows you to plug in custom middleware to hook into events:
 
-### Supported Events
+## Supported Events
 
-* `before_worker_boot`
-* `after_worker_boot`
-* `before_worker_shutdown`
-* `after_worker_shutdown`
-* `before_enqueue`
-* `after_enqueue`
-* `on_error`
+- `before_worker_boot`
+- `after_worker_boot`
+- `before_worker_shutdown`
+- `after_worker_shutdown`
+- `before_enqueue`
+- `after_enqueue`
+- `on_error`
 
-### Example
+## Example
 
-```python
+```python python
 from modelq.app.middleware import Middleware
 
 class LoggingMiddleware(Middleware):
@@ -163,19 +163,19 @@ class LoggingMiddleware(Middleware):
         print(f"Error in task {task.task_id}: {error}")
 ```
 
-Attach to ModelQ instance:
+### Attach to ModelQ instance:
 
-```python
+```python python
 q.middleware = LoggingMiddleware()
 ```
 
 ---
 
-## 🛠️ Configuration
+## Configuration
 
 Connect to Redis using custom config:
 
-```python
+```python python
 from redis import Redis
 
 imagine_db = Redis(host="localhost", port=6379, db=0)
@@ -188,12 +188,12 @@ modelq = ModelQ(
 
 ---
 
-## 📜 License
+## License
 
 ModelQ is released under the MIT License.
 
 ---
 
-## 🤝 Contributing
+## Contributing
 
 We welcome contributions! Open an issue or submit a PR at [github.com/modelslab/modelq](https://github.com/modelslab/modelq).
