chnages to structure

--- a/api-reference.mdx
+++ b/api-reference.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Overview'
+title: 'API Reference'
 description: 'API Reference'
 ---
 
@@ -11,7 +11,7 @@ Ready to start building? Here are your next steps:
 ### Quick Start Options
 
 <CardGroup cols={2}>
-  <Card title="Developer Guide" icon="code" href="index">
+  <Card title="Developer Guide" icon="code" href="developer-guide">
     Tutorials to integrate ModelsLab APIs into your applications
   </Card>
   <Card title="Interactive Playground" icon="play" href="https://modelslab.com/playground">
