--- a/developer-guide.mdx
+++ b/developer-guide.mdx
@@ -22,7 +22,7 @@ Transform your ideas into reality with ModelsLab's comprehensive AI API suite. G
   <Card 
     title="API Reference" 
     icon="code" 
-    href="/overview"
+    href="/api-reference"
   >
     Complete API documentation with examples and integration guides
   </Card>
@@ -112,31 +112,3 @@ Scale your AI applications with enterprise-grade infrastructure and support.
     24/7 priority support with dedicated account management
   </Card>
 </CardGroup>  
-
-## Developer Resources
-
-Everything you need to integrate and optimize ModelsLab APIs.
-
-<CardGroup cols={2}>
-  <Card
-    title="API Reference"
-    icon="code"
-    href="/overview"
-  >
-    Complete API documentation with interactive examples
-  </Card>
-  <Card
-    title="SDKs & Libraries"
-    icon="box"
-    href="/sdk/python"
-  >
-    Official SDKs for Python, JavaScript, PHP, and more
-  </Card>
-  <Card
-    title="Code Examples"
-    icon="file-code"
-    href="/examples"
-  >
-    Real-world implementation examples and tutorials
-  </Card>
-</CardGroup>
